lots of styling changes fixing the font sizing to match that of the design docs given made all the pages align center justify center so that the user does not travel with their eyes all oveer the place

--- a/firefly/src/styles/signIn.scss
+++ b/firefly/src/styles/signIn.scss
@@ -1,6 +1,5 @@
 .sign-in-container {
-  // height: 80vh;
-  padding: 4% 5%;
+  padding: 0% 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
